--- a/index.html
+++ b/index.html
@@ -1,11 +1,98 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Delfines - Tu animal favorito</title>
+  
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
+
 </head>
 <body>
-    <h1>hola mundo</h1>
+
+<div class="publicidad publicidad-izquierda">
+  <img src="imagen_izquierda.jpg" alt="Publicidad izquierda" style="width: 100%; height: auto;">
+</div>
+
+
+<div id="inicio" class="seccion">
+  <div class="container text-center">
+    <h6 class="display-4">Descubre el mundo de los delfines</h6>
+    <p class="lead">¡Bienvenido a mi página sobre mi animal favorito!</p>
+  </div>
+</div>
+
+
+<div id="informacion" class="seccion">
+  <div class="container">
+    <h2 class="titulo-seccion">Conoce más sobre los delfines</h2>
+    <div class="row">
+      <div class="col-lg-6">
+        <p>Los delfines son mamíferos marinos inteligentes y sociables que abarcan alrededor de 40 especies, tienen una amplia distribución geográfica en los océanos del mundo y se alimentan principalmente de peces, calamares y crustáceos, utilizando complejas estrategias de caza en grupo.</p>
+        <p>Se comunican entre sí mediante sonidos complejos y tienen una gran capacidad de aprendizaje.</p>
+        
+      </div>
+      <div class="col-lg-6">
+        <img src="two_dolphins.jpg" class="img-fluid rounded" alt="Delfines">
+      </div>
+    </div>
+  </div>
+</div>
+
+<div class="publicidad publicidad-derecha">
+  <img src="imagen_derecha.jpg" alt="Publicidad derecha" style="width: 100%; height: auto;">
+</div>
+
+<div id="galeria" class="seccion">
+    <div class="container">
+      <h2 class="titulo-seccion text-white">Galería de imágenes</h2>
+      <div class="row">
+        <div class="col-md-4">
+          <div class="card">
+            <img src="amigos.jpg" class="card-img-top img-fluid" style="max-height: 200px;" alt="Delfín 1">
+          </div>
+        </div>
+        <div class="col-md-4">
+          <div class="card">
+            <img src="delfines-1100x619.jpg" class="card-img-top img-fluid" style="max-height: 200px;" alt="Delfín 2">
+          </div>
+        </div>
+        <div class="col-md-4">
+          <div class="card">
+            <img src="drogan-delfines-enigma-comportamiento-peces-globo_69.jpg" class="card-img-top img-fluid" style="max-height: 200px;" alt="Delfín 3">
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+  
+
+<div id="video" class="seccion">
+  <div class="container">
+    <h2 class="titulo-seccion">Video sobre delfines</h2>
+    <div class="embed-responsive embed-responsive-16by9">
+      <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/H_wPhu9Z650" allowfullscreen></iframe>
+    </div>
+  </div>
+</div>
+
+<div id="datos-curiosos" class="seccion">
+  <div class="container text-center">
+    <h2 class="titulo-seccion">Datos curiosos sobre los delfines</h2>
+    <p>Los delfines pueden nadar a velocidades de hasta 35 km/h.</p>
+    <p>Algunas especies de delfines son capaces de usar herramientas para buscar comida.</p>
+  </div>
+</div>
+
+<div class="container-fluid fixed-bottom text-center bg-dark py-2">
+  <a href="" class="text-white mx-3">Inicio</a>
+  <a href="" class="text-white mx-3">Información</a>
+  <a href="" class="text-white mx-3">Galería</a>
+  <a href="" class="text-white mx-3">Video</a>
+  <a href="" class="text-white mx-3">Datos Curiosos</a>
+</div>
+
+<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.min.js"></script>
 </body>
 </html>
