Termino de colocar los elementos en la pagina

--- a/index.html
+++ b/index.html
@@ -34,9 +34,6 @@
           <li class="nav-item">
             <a class="nav-link" href="#" style="color: rgb(239, 239, 250); font-size: 20px; margin-right: 20px;">Cara Oculta</a>
           </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#" style="color: rgb(239, 239, 250); font-size: 20px; margin-right: 20px;">Sobre mí</a>
-          </li>
         </ul>
       </div>
       <form class="form-inline mt-2 mt-md-0">
@@ -114,10 +111,11 @@
       <div class="row justify-content-center">
         <div class="col-lg-2">
           <div class="feature-item">
+            <a href="" target="_blank"></a>
             <img src="meme-delfin.jpg" class="bd-placeholder-img rounded-circle feature-image" width="140" height="140" alt="Feature One">
             <h3 class="h2">Meme sobre delfines</h3>
             <p>Encontrarás todo tipo de chistes y memes sobre delfines</p>
-            <p><a class="btn btn-secondary" href="#">Ver detalles »</a></p>
+            <p><a class="btn btn-secondary" href="https://es.memedroid.com/memes/tag/delfines">Ver detalles »</a></p>
           </div>
         </div>
         <div class="col-lg-2">
@@ -125,7 +123,7 @@
             <img src="video-delfines.jpg" class="bd-placeholder-img rounded-circle feature-image" width="140" height="140" alt="Feature Two">
             <h3 class="h2">Videos de delfines</h3>
             <p>Todo tipo de información captada a través de la cámara, ¡dale a click!</p>
-            <p><a class="btn btn-secondary" href="#">Ver detalles »</a></p>
+            <p><a class="btn btn-secondary" href="https://www.google.com/search?q=videos+de+delfines&oq=videos+de+de&gs_lcrp=EgZjaHJvbWUqDggBEEUYOxhDGIAEGIoFMgYIABBFGDsyDggBEEUYOxhDGIAEGIoFMgYIAhBFGEAyBggDEEUYOTIMCAQQABhDGIAEGIoFMgwIBRAAGBQYhwIYgAQyBwgGEAAYgAQyBwgHEAAYgATSAQgzODU1ajBqN6gCCLACAQ&sourceid=chrome&ie=UTF-8">Ver detalles »</a></p>
           </div>
         </div>
         <div class="col-lg-2">
@@ -133,18 +131,29 @@
             <img src="ayudar-delfines.png" class="bd-placeholder-img rounded-circle feature-image" width="140" height="140" alt="Feature Three">
             <h3 class="h2">Ayuda a los delfines</h3>
             <p>Aquí encontrarás la información actualizada y encuentas para proteger a estos animales </p>
-            <p><a class="btn btn-secondary" href="#">Ver detalles »</a></p>
+            <p><a class="btn btn-secondary" href="https://delfindehector.org/que-podemos-hacer-para-evitar-la-extincion-de-los-delfines-de-maui-y-hector/">Ver detalles »</a></p>
           </div>
         </div>
       </div>
     </div>
-    <!-- Banners de publicidad -->
+    
     <div class="row mt-5">
       <div class="col-md-3">
-        <img src="experiencia-delfines.jpg" alt="Banner 1" class="img-fluid">
+        <div class="card">
+          <img src="acuario.jpg" class="card-img-top" alt="Excursión 1" style="max-height: 400px;">
+          <div class="card-body">
+              <a href="https://www.oceanografic.org/planifica-tu-visita/hoy-en-el-acuario/" class="btn btn-primary">Más Información</a>
+          </div>
       </div>
+      <div class="card">
+          <img src="delfines_saltando.jpg" class="card-img-top" alt="Excursión 2" style="max-height: 400px;">
+          <div class="card-body">
+              <a href="https://www.youtube.com/watch?v=NfXmNPhtOK4"  class="btn btn-primary">Más Información</a>
+          </div>
+      </div>
+      </div>
+
       <div class="col-md-6">
-        <!-- Contenido principal -->
         <div class="container" id="containerPrincipal">
           <h2>Últimas Noticias sobre Delfines</h2>
           <div class="card-deck">
@@ -170,7 +179,12 @@
         </div>
       </div>
       <div class="col-md-2">
-        <img src="acuario.jpg" alt="Banner 2" class="img-fluid ">
+        <img src="vecteezy_dolphin-png-with-ai-generated_24705062.png" alt="Banner 2" class="img-fluid ">
+        <div class="card">
+            <img src="Form-1-removebg-preview.png" alt="" style="max-height: 300px; margin-top: -140px;">
+            <p>Apúntate para ser miembro y estar al tanto de las últimas noticias del mundo de los delfines</p>
+            
+          </div>
       </div>
     </div>
   </div>
@@ -180,13 +194,13 @@
     <br>
     <br>
 <div id="contenedorPrincipal">
-  <!-- Banners de publicidad -->
   <div class="row mt-5">
-      <div class="col-md-3">
-          <img src="vecteezy_dolphin-png-with-ai-generated_24705062.png" alt="Banner 1" class="img-fluid">
-      </div>
+    <div class="col-md-3">
+      <class="card">
+       <p></p> 
+      </class>   
+    </div>
       <div class="col-md-6">
-          <!-- Contenido principal -->
           <div class="container" id="containerPrincipal">
               <h2>La cara oculta de los delfines</h2>
               <div class="card-deck">
